--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource-variable/martian-mono": "^5.1.0",
+    "@midudev/tailwind-animations": "^0.1.0",
     "atropos": "^2.0.2",
     "clsx": "^2.1.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
