--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "atropos": "^2.0.2",
     "clsx": "^2.1.1",
     "next": "15.0.2",
+    "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "tailwind-merge": "^2.5.4",
