--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.0",
     "@fontsource-variable/martian-mono": "^5.1.0",
     "@midudev/tailwind-animations": "^0.1.0",
     "atropos": "^2.0.2",
     "clsx": "^2.1.1",
+    "motion": "^11.15.0",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-02c0e824-20241028",
