--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@midudev/tailwind-animations": "^0.1.0",
     "atropos": "^2.0.2",
     "clsx": "^2.1.1",
+    "flickr-justified-gallery": "^2.2.0",
+    "lightgallery": "^2.8.2",
     "motion": "^11.15.0",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.25",
