--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "atropos": "^2.0.2",
     "clsx": "^2.1.1",
     "flickr-justified-gallery": "^2.2.0",
+    "html-to-image": "^1.11.11",
     "lightgallery": "^2.8.2",
     "motion": "^11.15.0",
     "next": "15.0.2",
