--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@midudev/tailwind-animations": "^0.1.0",
     "atropos": "^2.0.2",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.13",
     "motion": "^11.15.0",
     "next": "15.0.2",
     "next-auth": "^5.0.0-beta.25",
